# PDCCH_allocator

./: Cargo.toml  README.md
doc/: 02_pdcch_alloc.md  bench_doc.md  pdcch_alloc.md  servise_code.md
src/: main.rs
src/allocator/: mod.rs  sequential_pdcch_allocator.rs  servise_code.rs  shuffling_pdcch_allocator.rs  structures.rs  tree_pdcch_allocator.rs
src/benches/: simple_benchmark.rs
