[package]
name = "allocator"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "suggestions", "derive"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "simple_benchmark"
harness = false
